--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,8 @@
     --ring: 240 10% 3.9%;
 
     --radius: 0.5rem;
+
+    --font-jetbrainsMono: "JetBrains Mono", monospace;
   }
 
   .dark {
@@ -72,6 +74,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-jetbrainsMono);
   }
   button {
     @apply active:outline-none;
